# etsai

./: .copier-answers.yml  .pdm-python  README.md  gaztaroa_menditaldea_all_day_calendar.ics  gaztaroa_menditaldea_calendar.ics  pyproject.toml
etsai/: main.py  plugin_loader.py  utils.py
etsai/plugins/media/: gaztaroa.py  image.py  video.py
etsai/plugins/system/: status.py
makefiles/: specific.mk
makefiles/common/: environment.mk
tests/: test_plugins.py
